Fixed whitespace in strings

--- a/src/Glitch/Renderer/assets/scss/_scalars.scss
+++ b/src/Glitch/Renderer/assets/scss/_scalars.scss
@@ -27,6 +27,7 @@
 .string {
     > .line {
         color: var(--string);
+        white-space: pre;
     }
 
     > .length {
